# 03-failure-forensics-tool

./: .gitignore  README.md  docker-compose.infra.yml
01_model_regression_system/: Dockerfile  docker-compose.yml  pyproject.toml
01_model_regression_system/.github/workflows/: regression.yml
01_model_regression_system/prompts/: classifier_v1.yaml
01_model_regression_system/src/: __init__.py  cli.py  db.py  evaluator.py  models.py  regressor.py
01_model_regression_system/tests/: ground_truth.json  test_regressor.py
02_llm_cost_autopilot/: Dockerfile  docker-compose.yml
02_llm_cost_autopilot/config/: models.yaml
02_llm_cost_autopilot/src/: __init__.py  main.py  models.py  proxy_router.py  verifier.py
02_llm_cost_autopilot/tests/: test_proxy_router.py
03_failure_forensics_tool/src/: __init__.py  db.py  forensics.py  models.py  pipeline.py
03_failure_forensics_tool/tests/: test_pipeline.py
03_failure_forensics_tool/ui/: app.py
04_self_healing_docs/: README.md
04_self_healing_docs/src/: __init__.py  ast_parser.py  diff_checker.py  doc_linker.py  github_integration.py  models.py  reconciler.py
04_self_healing_docs/tests/: test_ast_parser.py
05_output_arbitration_system/src/: __init__.py  adjudicator.py  critics.py  graph.py  main.py  models.py
05_output_arbitration_system/tests/: test_adjudicator.py
06_hybrid_search_rag/src/: __init__.py  citation_verifier.py  hybrid_retriever.py  ingestion.py  main.py  models.py  reranker.py
06_hybrid_search_rag/tests/: test_hybrid_retriever.py
12_ai_feature_flag_system/: README.md
(+57 files in other folders)
